# breeze-dock

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  floating-bugs.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.claude/skills/: breeze-dock-ui.md
.serena/: project.yml
docs/: backend-architecture.md  frontend-architecture.md
public/fonts/Alibaba-PuHuiTi/: README.md
scripts/: build.bat  generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  clipboard.rs  groups.rs  mod.rs  notes.rs  security.rs  settings.rs  shortcuts.rs  tags.rs  window.rs
src-tauri/src/crypto/: aes.rs  mod.rs
src-tauri/src/db/: crypto.rs  floating.rs  groups.rs  mod.rs  notes.rs  schema.rs  tags.rs
src-tauri/src/fs/: backup.rs
src-tauri/src/tray/: icon.rs  mod.rs
src-tauri/src/window/: floating.rs  mod.rs  security.rs
src/components/dnd/: GroupDropZone.tsx  SortableNoteItem.tsx
src/components/layout/: BrAppShell.tsx  BrAuthGuard.tsx  BrCloseConfirmModal.tsx  BrFloatingContainer.tsx  BrMainLayout.tsx  BrNavigateHome.tsx  BrSidebar.tsx  (+2 more)
src/hooks/: useAutoSave.ts  useContextMenu.ts  useDebounce.ts  useFloatingWindow.ts  useGlobalShortcuts.ts  useKeyboard.ts  useTheme.ts
src/lib/: utils.ts
src/stores/: useGroupStore.ts  useNoteStore.ts  useSettingStore.ts  useTagStore.ts  useUIStore.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: clipboard.ts  format.ts  index.ts  search.ts
(+42 files in other folders)
