[package]
name = "breeze-note"
version = "0.1.0"
edition = "2021"

[lib]
name = "breeze_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol", "tray-icon", "image"]
custom-protocol = ["tauri/custom-protocol"]
tray-icon = ["tauri/tray-icon"]
image = ["tauri/image"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.28", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.21"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1.0"
rand = "0.8"
arboard = "3"
argon2 = "0.5"

# Windows 平台依赖（用于窗口透明度、鼠标穿透、安全策略）
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = true
